--- a/project/vipinstagram/disclaimer/id/index.html
+++ b/project/vipinstagram/disclaimer/id/index.html
@@ -52,13 +52,13 @@
                               <li>Sebagian ISP seperti di Indonesia meblokir Reddit, Vimeo, dll. Pakai VPN berbayar, proxies, dll., atau manut jaga aman.<br></li>
                               <li>Harap cek kecepatan internet Anda di fast.com, dll. Internet lelet, jangan harap.<br></li>
                               <li>Fitur unduhan yang menyenangkan hanya bisa via web internal aplikasi, bukan aplikasi resmi atau browser luar. Periksa <b>Cara pemakaian</b><br></li>
-                              <li>Semua unduhan hanya mungkin bila aset media tersimpan internal pada situs terdukung, atau jaringan mereka. Sejumlah situs seperti Reddit, atau Twitter, mengarahkan tautan ke luar seperti cnn.com, dll. Situs luar
-                                tidak terdukung. Harap cari media yang melekat ke situs terdukung.<br></li>
+                              <li>Semua unduhan hanya mungkin bila aset media tersimpan internal pada situs terdukung, atau jaringan mereka. Sejumlah situs seperti Reddit, atau Twitter, mengarahkan tautan ke luar seperti cnn.com, dll. Situs luar belum terdukung. Harap cari media yang melekat ke situs terdukung.<br></li>
                               <li>Sebagian situs seperti Reddit atau Twitter menempelkan postingan/ tweet di postingan lain. Unduhan hanya mungkin untuk postingan mandiri, bukan postingan yang ditempelkan. Tinggal kunjungi postingan asli guna mengunduh. Hanya video Twitter terdukung, bukan foto. Foto hanya bisa unduh ditekan lama pada foto, bukan via salin tautan.<br></li>
                               <li>Video Youtube yang ditempel di Reddit, Twitter, dll. TIDAK didukung.<br></li>
                               <li>Tautan ke kontent sensitif atau akun privat digawangi token sensitif-waktu. Artinya bisa hangus beberapa detik kemudian. Bila gagal unduh gara-gara lelet atau lain hal, tautan akan hangus. Hapus unduhan gagal, dan unduh ulang.<br></li>
                               <li>Bila aplikasi macet, atau crash, harap coba ulang. Mungkin tidak terjadi terusa-terusan.<br></li>
                               <li>Jangan skrap! Akun dan IP Anda bisa kena b.a.n. Bila kena, tidak akan bisa akses situs. Bikin bakup, banyak, VPN berbayar, proxy, dll. VPN gratisan bisa menurunkan kecepatan dari 1MB jadi 100KB. Bila tidak paham, jangan skrap!<br></li>
+                              <li>Khusus perihal berbagi ke sosmed: Sebagian aplikasi bisa menerima foto lebih dari satu seperti Facebook, Whatsapp, Twitter, dll., sebagian lagi hanya bisa terima satu foto atau video seperti Instagram, Reddit, dll. Harap mafhum, dan jangan kirim tinjauan negatif untuk sesuatu yang tidak didukung oleh aplikasi resmi menurut standard Android. Ini di luar kuasa kita tanpa memakai API mereka.</li>
                               <li>Bintang satu berarti kebencian di Android. Saya bikin aplikasi ini dalam tempo 3000 jam. Mohon jadi bahan pertimbangan terlepas segala kekurangannya.</li>
                             </ul>
                           </div>
@@ -67,7 +67,7 @@
                           <summary>Masalah yang dikenali</summary>
                           <div>
                             <ul>
-                              <li>Aplikasi tidak memakai API resmi. Artinya bisa tidak jalan bila situs Instagram, dll. mengubah jeroan. Bila dulu jalan, kemudian tidak, harap bantu lapor via surel <b>Umpan balik</b>. Tolong jangan kirim tijauan negatif gara-gara perubahan yang diluar kuasa kami. Kami akan coba mengatasinya dalam tempo sesingkat-singkatnya.<br></li>
+                              <li>Aplikasi tidak memakai API resmi. Artinya bisa tidak jalan bila situs Instagram, dll. mengubah jeroan. Bila dulu jalan, kemudian tidak, harap bantu lapor via surel <b>Umpan balik</b>. Tolong jangan kirim tijauan negatif gara-gara perubahan yang diluar kuasa kami. Kami akan coba mengatasinya dalam tempo sesingkat-singkatnya. Kami akan coba memakai API bila aplikasi ini mulai matang.<br></li>
                               <li>Video Reddit bisu. Harap maklum sampai ketemu solusi.<br></li>
                               <li>Kamera tidak jalan pada Android 10 (API 29). Harap abaikan sampai ketemu solusi.<br></li>
                               <li>Jangan pakai web aplikasi buat daftar akun. Ini cuma webview, bukan browser sungguhan, terlalu banyak kekurangan bisa merusak proses registrasi, seperti unggah, salin/ tempel, dll. Gunakan browser sungguhan atau aplikasi resmi buat daftar akun. Gunakan aplikasi bila sudah punya akun buat unduh, bukan buat daftar akun baru!<br></li>
