--- a/project/vipinstagram/disclaimer/index.html
+++ b/project/vipinstagram/disclaimer/index.html
@@ -51,14 +51,13 @@
                               <li>Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use reliable non-free VPN, proxies, etc., or stay safe.<br></li>
                               <li>Please check your internet speed at fast.com, etc. Slow speed may result in broken downloads.<br></li>
                               <li>Most convenient features of downloads are via the app web interface, not the official apps, nor external browsers. Check out <b>How to use</b><br></li>
-                              <li>All downloads assumed the media assets are internal to each supported site, or their networks. Some sites like Reddit, or Twitter, point links to external ones like cnn.com, etc. These external sites are not
-                                supported. Meaning download may break.<br></li>
-                              <li>Some sites embed a post/ tweet in another post/ tweet like Reddit or Twitter. Downloading them only works for a stand alone post/ tweet, not the one embedded inside another. Just visit its original to download. Only
-                                Twitter videos are supported, not images, yet, except partially by long pressing them one by one.<br></li>
+                              <li>All downloads assumed the media assets are internal to each supported site, or their networks. Some sites like Reddit, or Twitter, point links to external ones like cnn.com, etc. These external sites are not supported. Meaning download may break.<br></li>
+                              <li>Some sites embed a post/ tweet in another post/ tweet like Reddit or Twitter. Downloading them only works for a stand alone post/ tweet, not the one embedded inside another. Just visit its original to download. Only Twitter videos are supported, not images, yet, except partially by long pressing them one by one.<br></li>
                               <li>Youtube videos embedded at Reddit, Twitter, etc. are NOT supported.<br></li>
-                              <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens, identified by 3-5x times longer links. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
+                              <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
                               <li>If something is broken, unless it keeps happening, try restarting the app, and see if any better.<br></li>
-                              <li>Do not use scrape functionality, unless you know what you are doing. Your accounts and IPs may be b.a.n.n.e.d. When banned, you cannot access the websites! Have backups, paid VPN, proxies, etc., many. Free VPNs may drop your speed from 1MB to 100KB. If you don't undertand, please don't scrape!<br></li>
+                              <li>Do not scrape! Your accounts and IPs may be b.a.n.n.e.d. When banned, you cannot access the websites! Have backups, paid VPN, proxies, etc., many. Free VPNs may drop your speed from 1MB to 100KB. Again, do not scrape!<br></li>
+                              <li>Specific social media sharing: while some apps can receive multiple images like Facebook, Whatsapp, Twitter, etc., some others cannot such as Instagram (See https://developers.facebook.com/docs/instagram/sharing-to-feed), Reddit, etc. Please bear with it and do not send negative reviews for something that the native apps don't even support in the first place using Android standards. It is simply beyond our power.</li>
                               <li>One star is a mere hatred at Android. It took me literally 3000 hours to build this app. Kindly take it into consideration regardless its limitations.</li>
                             </ul>
 
@@ -68,8 +67,7 @@
                         <details>
                           <summary>Known bugs/ issues</summary>
                             <ul>
-                              <li>This app doesn't use official APIs. Meaning it may break when the sites change their internals. If it was working, then suddenly breaks, please report via <b>Feedback</b> form. Kindly do not submit negative reviews when this happens. It is
-                                simply beyond our power. We'll do our best to fix it ASAP thanks to your reports.<br></li>
+                              <li>This app doesn't use official APIs. Meaning it may break when the sites change their internals. If it was working, then suddenly breaks, please report via <b>Feedback</b> form. Kindly do not submit negative reviews when this happens. It is simply beyond our power. We'll do our best to fix it ASAP thanks to your reports. We'll consider using APIs at a more matured stage, so stay tuned.<br></li>
                               <li>Reddit videos have no sound. I haven't been able to mux the audio, yet. Please ignore Reddit till future fixes.<br></li>
                               <li>Camera not working in Android 10 (API 29). Please ignore till the next fix.<br></li>
                               <li>Do not use the app web interface to register accounts. It is just a webview, not real browser, too many limitations may break registration process, like upload, paste etc. Use real browsers or official apps for registrations. Only use it once you have an account to login and download, not to register a new one. This also means the web app is not as robust as the official apps. Please bear with it.<br></li>
