--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -195,6 +195,13 @@
                           </div>
                         </details>
                         <details>
+                          <summary>Kenapa tidak ada Tiktok di berbagi?</summary>
+                          <div>
+                            2020/11: Buka aplikasi apapun, and pijit tombol Berbagi. Anda bisa lihat Whatsapp, Twitter, Likee, Telegram, Facebook, dan aplikasi lain, tapi TikTok tidak ada. Sayangnya, tikTok tidak menerima kiriman berbagi via standard Android tanpa memakai API, atau partner. Hanya ingin dibagi.
+                          </div>
+                        </details>
+                        <details>
+                        <details>
                           <summary>Ada pertanyaan, saran, laporan bug, atau umpan balik?</summary>
                           <div>
                             Kami senang mendengar dari Anda! Silakan gunakan <b>Umpan Balik</b>, dan beri nilai aplikasi kami. Kritik pedas, tapi konstruktif akan membantu kami mendapatkan kekuatan untuk melanjutkan. <i>Salah satu tujuan hidupmu adalah untuk membantu orang lain. Jika Anda tidak dapat membantu orang, setidaknya jangan sakiti mereka</i>, kata Dalai Lama. Terima kasih!
