--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -330,6 +330,12 @@
                           </div>
                         </details>
                         <details>
+                          <summary>Why I don't see TikTok for sharing?</summary>
+                          <div>
+                            2020/11: You can open any other apps, and launch regular share intent. While you see Whatsapp, Twitter, Likee, Telegram, Facebook, and the rest of apps to share to, TikTok simply isn't there. Unfortunately, it doesn't take sharing using Android standards from other apps without using its API, or its partners. It just wants to be shared out.
+                          </div>
+                        </details>
+                        <details>
                           <summary>Have questions, suggestions, bug reports, or feedback?</summary>
                           <div>
                             We love to hear from you! Please use the <b>Feedback</b>, and rate our app. Any bitter, yet constructive, criticism will help us gain some strength to continue. <i>One of your life purposes is to help others. If you can't
