--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -43,18 +43,21 @@
                         <details>
                           <summary>Instagram</summary>
                           <div>
-                            <b>Internal web app interface:</b>
+                            <b>A. Internal web app interface:</b>
+                            Everything is done in one step.
                             <ol>
                               <li>Long press on any small thumbnails (videos or images) at listing pages: <i>/tags, /explore, /profile, or search pages</i>, etc.</li>
                               <li>Or tap the <b>BOOKMARK</b> icon.</li>
                               <li>Or tap the <b>LIKE</b> icon.</li>
                               <li>Or long press the post creation <b>TIME</b>.</li>
                             </ol>
-                            <b>External browsers, or Instagram app:</b>
+                            <b>B. External browsers, or Instagram app:</b>
+                            May take two or three steps. Tap the three vertical dots at the top right corner.
                             <ol>
-                              <li>Tap the three vertical dots at the top right corner, and hit <b>Copy link</b>.</li>
+                              <li>Hit <b>Copy link</b>.</li>
+                              <li>Or hit <b>Share link</b>, and find <b>VIP Downloader</b> icon.</li>
                             </ol>
-                            <p>Be informed! The last option requires you provide credentials via <b>Settings > Private mode</b>. Unlike the internal, the external may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations -- due to being web app, not native app. The same principle applies to other supported sites.</p>
+                            <p>Be informed! The option B and scraping may require you providing dummy credentials via <b>Settings > Accounts</b> due to restrictions. Option B may trigger annoying <b>New login</b> email warning due to being less persistent sessions. Please use the internal for convenience regardless its limitations -- due to being web app, not native app. The same principle applies to other supported sites, unless otherwise stated.</p>
                             <img src="https://gausarts.github.io/project/vipinstagram/howto/instagram-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/instagram-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/instagram-large.jpg 1024w" alt="How to download Instagram photos and videos easily with Android" />
 
                           </div>
