--- a/project/vipinstagram/faq/id/index.html
+++ b/project/vipinstagram/faq/id/index.html
@@ -62,29 +62,25 @@
                           <div>
                             <b>Privat/ Internal</b>:
                             <ul>
-                              <li>Harus login via aplikasi guna bisa mengakses akun private dan public.</li>
+                              <li>Harus login via aplikasi guna bisa mengakses akun privat dan publik.</li>
                               <li>Hanya bisa memakai tampilan web yang disediakan aplikasi.</li>
-                              <li>Bisa unduh dimana saja cukup dengan pijit lama pada gambar kecil. Atau pijit ikon <b>Bookmark</b> di laman penuh. Atau pencet <b>Salin tautan</b> pada akun publik.</li>
+                              <li>Bisa unduh dimana saja cukup dengan pijit lama pada gambar kecil. Atau pijit ikon <b>Bookmark</b> atau <b>Suka</b> di laman penuh. Atau pencet <b>Salin tautan</b> pada akun publik. Atau pijit lama wantu/ tanggal postingan</li>
                               <li>Bisa skrap akun privat atau publik.</li>
                             </ul>
                             <b>Publik/ Eksternal</b>:
                             <ul>
-                              <li>Tidak harus login via aplikasi, hanya bisa akses akun publik.</li>
+                              <li>Tidak harus login via aplikasi, hanya bisa akses akun publik. Untuk privat, harus isi <b>Setingan > Akun</b> .</li>
                               <li>Bisa memakai aplikasi Instagram atau browser bebas.</li>
-                              <li>Hanya bisa unduh lewat <b>Salin tautan</b> pada akun publik</li>
+                              <li>Hanya bisa unduh lewat <b>Salin tautan</b> atau <b>Bagi tautan</b>  pada akun publik</li>
                               <li>Tidak bisa skrap.</li>
                             </ul>
-                            Berhubung pembatasan privasi terbaru, harap isi akun mainan/ sembarang via <b>Setingan > Akun</b> agar bisa unduh privat dan publik. Tidak perlu same dengan akun resmi. Pastikan kedua akun harus follow akun privat yang sama agar bisa selaras dan sama-sama bisa buka/ unduh akun privat.
+                            Berhubung pembatasan privasi terbaru, harap isi akun mainan/ sembarang via <b>Setingan > Akun</b> agar bisa unduh privat dan publik. Tidak perlu sama dengan akun resmi. Pastikan kedua akun harus follow akun privat yang sama agar bisa selaras dan sama-sama bisa buka/ unduh akun privat.
                           </div>
                         </details>
                         <details>
                           <summary>Cara unduh media dari akun privat?</summary>
                           <div>
-                            <ol>
-                              <li>Tekan lama pada gambar (seperti pada laman /explore, /tags, /search atau profile, pokoknya yang ada gambar kecil) guna menyimpan media. Aplikasi akan mengunduh bila mendetekeksi tekanan tertahan.</li>
-                              <li>Masuk laman penuh, pijit tombol unduhan yang disediakan. Harus login dulu agar aplikasi bisa melihat yang Anda lihat tanpa otorisasi khusus.
-                            </li>
-                            </ol>
+                            <p>Lihat di atas, atau <b>Cara pemakaian</b>. Sama saja.</p>
                             <p>Aplikasi ini tidak membaca, tidak tahu, tidak menyimpan, juga tidak peduli perihal akun atau
                             kata sandi Instagram Anda. Aplikasi hanya meminjam mata Anda guna bisa mengunduh media. Lihat selengkapnya pada <b>Cara pemakaian</b>.</p>
                           </div>
@@ -94,18 +90,18 @@
                           <div>
                             Ini versi sederhana, tidak terlalu hebat. Perlu campur tangan berhubung halaman dibikin dan hancurkan secara dinamis. <br>
                             <ol>
-                              <li>Ramban laman sampai ke bawah guna mengumpulkan tautan, dan naik lagi guna
-                            verifikasi ulang. <br></li>
+                              <li>Ramban laman sampai ke bawah guna mengumpulkan tautan, sampai mentok. Atau pijit terus <b>Skan ulang</b> buat percepat selancar.<br></li>
                             <li>Pijit tombol Skrap, dan tunggu laba-laba beres bekerja.</li>
                             </ol>
+                            <p>Gunakan dengan penuh tanggung jawab, bijaksana dan bijaksini.</p>
                           </div>
                         </details>
                         <details>
                           <summary>Persyaratan Skraping?</summary>
                           <div>
                             <ul>
-                              <li>Halaman profil berisi gambar kecil, bukan laman berisi gambar besar. <br></li>
-                              <li>Koneksi internet kuat. <br></li>
+                              <li>Halaman profil berisi gambar kecil, bukan laman berisi gambar besar.<br></li>
+                              <li>Koneksi internet kuat. Lelet jangan harap.<br></li>
                               <li>Ruang penyimpanan besar (30gb+ amanya). Jika minim, bisa error kekurangan ruang. Jangan panik.
                             Pijit <b>Abort</b>. Atur ruang, pindah dan hapus berkas. Ganti atau masukkan kartu memori kosong. Pastikan dipilih via tombol <b>Atur folder</b>.
                             </li>
@@ -173,19 +169,13 @@
                         <details>
                           <summary>Bagaimana cara mengirim ulang video atau gambar?</summary>
                           <div>
-                            Ketuk foto kecil apa pun untuk membuka tampilan galeri. Cari tombol dengan tanda plus (+), dan ketuk tombol <b>Regram / repost</b>.
+                            Ketuk foto kecil apa pun untuk membuka tampilan galeri. Cari tombol dengan tanda <b>Regram / repos</b>, dan pilih repos ke sosmed apa saja: Instagram, Facebook, Twitter, dll. Instagram tidak bisa menerima lebih dari satu foto. Aplikasi lain bisa.
                           </div>
                         </details>
                         <details>
                           <summary>Tidak ada yang diunduh?</summary>
                           <div>
-                            Tunggu beberapa saat. Agar pengunduhan otomatis berfungsi, pastikan bahwa <b>VIP Downloader</b> sudah terbuka sebelum mengetuk <b>Salin tautan</b> di Instagram. Anda dapat mengetuk ikon <b>VIP Downloader</b> bila muncul untuk memverifikasi proses pengunduhan. Atau abaikan untuk melanjutkan penelusuran. Ikon akan hilang setelah beberapa detik. Namun gambar atau video akan diunduh secara otomatis selama aplikasi ini tidak mati. Jika gagal karena suatu alasan, Anda dapat menempelkan tautan klipbor ke dalam input teks yang disediakan secara manual.
-                          </div>
-                        </details>
-                        <details>
-                          <summary>Mengapa galeri berkedip saat tampil gambar besar?</summary>
-                          <div>
-                            Gambar pertama dimuat sebagai thumbnail kecil untuk menghindari masalah OutOfMemory. Setelah gambar fokus, versi gambar yang lebih besar menggantikan thumbnail.
+                            Tunggu beberapa saat. Agar pengunduhan otomatis berfungsi, pastikan bahwa <b>VIP Downloader</b> sudah terbuka sebelum mengunduh. Anda dapat mengetuk ikon <b>VIP Downloader</b> bila muncul untuk memverifikasi proses pengunduhan. Atau abaikan untuk melanjutkan penelusuran. Ikon akan hilang setelah beberapa detik. Namun gambar atau video akan diunduh secara otomatis selama aplikasi ini tidak mati. Jika gagal karena suatu alasan, Anda dapat menempelkan tautan klipbor ke dalam input teks yang disediakan secara manual (harus diaktifkan dulu via Setingan).
                           </div>
                         </details>
                         <details>
@@ -197,7 +187,7 @@
                         <details>
                           <summary>Kenapa tidak ada Tiktok di berbagi?</summary>
                           <div>
-                            2020/11: Buka aplikasi apapun, and pijit tombol Berbagi. Anda bisa lihat Whatsapp, Twitter, Likee, Telegram, Facebook, dan aplikasi lain, tapi TikTok tidak ada. Sayangnya, tikTok tidak menerima kiriman berbagi via standard Android tanpa memakai API, atau partner. Hanya ingin dibagi.
+                            2020/11: Buka aplikasi apapun, and pijit tombol Berbagi. Anda bisa lihat Whatsapp, Twitter, Likee, Telegram, Facebook, dan aplikasi lain, tapi TikTok tidak ada. Sayangnya, TikTok tidak menerima kiriman berbagi via standard Android tanpa memakai API, atau partner. Hanya ingin dibagi. Silakan upload langsung.
                           </div>
                         </details>
                         <details>
@@ -210,7 +200,11 @@
                         <details>
                           <summary>Kiat!</summary>
                           <div>
-                            Pada dasarnya tap cepat, lambat atau ganda atau pinch zoom apa saja untuk mengakses tampilan biasa atau zoom. Jika ada yang rusak, coba mulai ulang aplikasi, dan lihat apakah bisa lebih baik.
+                            <ul>
+                              <li>Pada dasarnya tap cepat, lambat atau ganda atau pinch zoom apa saja untuk mengakses tampilan biasa atau zoom.</li>
+                              <li>Jika ada yang rusak, coba mulai ulang aplikasi, dan lihat apakah bisa lebih baik.</li>
+                              <li>Pijit <b>Setingan > Periksa pembaruan</b> guna membarui FAQ, dll. dengan atau tanpa membarui aplikasi.</li>
+                            </ul>
                           </div>
                         </details>
                       </div>
