--- a/project/vipinstagram/faq/index.html
+++ b/project/vipinstagram/faq/index.html
@@ -373,7 +373,11 @@
                         <details>
                           <summary>Tips!</summary>
                           <div>
-                            Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better. Please use <b>Archives</b> and <b>Favorites</b> features to prioritize and organize better.
+                            <ul>
+                              <li>Basically quick or long tap or pinch zoom anything to access regular or zoom displays. If something broken, try restarting the app, and see if any better.</li>
+                              <li>Please use <b>Archives</b> and <b>Favorites</b> features to prioritize and organize better.</li>
+                              <li>Hit <b>Settings > Check updates</b> to view updated documentations like FAQs, etc. with or without app updates.</li>
+                            </ul>
                           </div>
                         </details>
 
