--- a/project/vipdrupal/faq/index.html
+++ b/project/vipdrupal/faq/index.html
@@ -71,6 +71,12 @@
                           </div>
                         </details>
                         <details>
+                          <summary>How to reset database?</summary>
+                          <div>
+                            Visit <b>System Settings > Apps > DruPocket > Clear cache| Clear data</b>. This will clean out database to its factory should you need to save some space. Be informed, you can no longer access the files. Be sure to back up database first via the provided settings for just incase you will need sme archived news later.
+                          </div>
+                        </details>
+                        <details>
                           <summary>How does Youtube integration works? And what for?</summary>
                           <div>
                             It requires the default Android Youtube player enabled. Be sure to have it installed. <br>Click the top left menu, find <b>Add feed</b> menu, and add your Youtube feeds. Or type something when the Youtube window is
