--- a/project/vipinstagram/howto/index.html
+++ b/project/vipinstagram/howto/index.html
@@ -86,14 +86,14 @@
                           <summary>Twitter</summary>
                           <div>
                           <ol>
-                              <li><b>Video</b>:
+                              <li><b>Video/ image</b>:
                               <ul>
                                 <li>Long press on post creation <b>TIME</b> (e.g.: 1h or 19m) to the right of username at each card of listing pages.</li>
                                 <li>Or tap the <b>SHARE</b> icon at bottom right of card listings, and hit <b>Copy link to Tweet</b>.</li>
                               </ul>
                               <li><b>Image</b>:
                               <ul>
-                                <li>Long press on images <b>internal to</b> or hosted in Twitter.</li>
+                                <li>Long press on images <b>internal to</b> or hosted in Twitter. If many images, just long press on one, not all.</li>
                               </ul>
                           </ol>
                           <p>Be informed! Only works for a stand-alone tweet, not the one embedded inside another tweet, identified by a bordered box/ card. Just visit its original tweet to download. Images leading to external sites, identified by <b>https://t.co/...</b> url, not internally hosted at Twitter, are not supported.</p>
@@ -117,7 +117,7 @@
                                 <li>No supports.</li>
                               </ul>
                           </ol>
-                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app or its similar apps. The only differences are slightly smaller size, and integrated organization with other video providers if using this app. And no watermak for Like. For SnackVideo, please use the <b>Copy link</b> via their apps as it has no usable website.</p>
+                          <p>Be informed! The web interface lacks of search and listing features. You can however search <b>usernames</b> using the internal search provided by this app at the top right corner. You can also download videos directly from TikTok app or its similar apps. The only differences are slightly larger size, no watermark, and integrated organizations with other video providers if using this app. And no watermak for TikTok and Like. For SnackVideo, please use the <b>Copy link</b> via their apps as it has no usable website.</p>
 
                           <img src="https://gausarts.github.io/project/vipinstagram/howto/tiktok-small.jpg"  srcset="https://gausarts.github.io/project/vipinstagram/howto/tiktok-medium.jpg 640w, https://gausarts.github.io/project/vipinstagram/howto/tiktok-large.jpg 1024w" alt="How to download TikTok videos easily with Android" />
 
@@ -146,7 +146,7 @@
                           <summary>Other supported sites</summary>
                           <div>
                             <ul>
-                              <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>SHARE</b> icon, or alike.</li>
+                              <li>Find and hit <b>Copy link</b>, normally displayed after clicking <b>three dots</b> icon, <b>SHARE</b> icon, or alike.</li>
                               <li>Or long press on post creation <b>TIME</b> if available.</li>
                             </ul>
                           </div>
