--- a/project/vipdrupal/disclaimer/index.html
+++ b/project/vipdrupal/disclaimer/index.html
@@ -12,8 +12,8 @@
   <meta name="HandheldFriendly" content="true" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="/themes/custom/bartok/favicon.ico" type="image/vnd.microsoft.icon" />
-  <link rel="canonical" href="/project/vipinstagram/disclaimer" />
-  <link rel="revision" href="/project/vipinstagram/disclaimer" />
+  <link rel="canonical" href="/project/vipdrupal/disclaimer" />
+  <link rel="revision" href="/project/vipdrupal/disclaimer" />
   <title>Disclaimer | gaus</title>
   <style>
     html,body{padding:0;margin:0;font-size:18px;line-height:1.2;overflow-x:hidden}details summary::-webkit-details-marker{display:none}details[open] summary~*{animation:open .3s ease-in-out}@keyframes open{0%{opacity:0}100%{opacity:1}}details summary{width:100%;padding:.75rem 0;border-top:1px solid #444;position:relative;cursor:pointer;font-size:.92rem;font-weight:300;list-style:none}details summary::after{content:"+";color:#999;position:absolute;font-size:1rem;line-height:0;margin-top:.5rem;right:0;font-weight:200;transform-origin:center;transition:200ms linear}details[open] summary::after{transform:rotate(45deg)}details summary{outline:0}summary~*{font-size:.92rem;line-height:1.6;margin:0 0 1rem;padding-top:1rem}article header{font-weight:600;text-align:right;padding:15px}article header a{padding:5px 10px;text-decoration:none;}article header a:visited{color:#000}@media screen and (max-width: 1025px){.visible-desktop{visibility:hidden;position:absolute}}
@@ -35,9 +35,9 @@
             <section class="section"><a id="main-content" tabindex="-1"></a>
               <div class="region region-content">
                 <div id="block-bartok-bold-system-main--2" class="block--bartok-bold-system-main--2 block block--system block--system-main-block">
-                  <article role="article" about="/project/vipinstagram/disclaimer" typeof="schema:WebPage" class="node node--1060 node--type-page node--view-mode-full clearfix">
+                  <article role="article" about="/project/vipdrupal/disclaimer" typeof="schema:WebPage" class="node node--1060 node--type-page node--view-mode-full clearfix">
                     <header><span property="schema:name" content="Disclaimer" class="rdf-meta hidden"></span>
-                      <a href="https://gausarts.github.com/project/vipinstagram/disclaimer/index.html">EN</a> | <a href="https://gausarts.github.com/project/vipinstagram/disclaimer/id/index.html">ID</a>
+                      <!-- <a href="https://gausarts.github.com/project/vipdrupal/disclaimer/index.html">EN</a> | <a href="https://gausarts.github.com/project/vipdrupal/disclaimer/id/index.html">ID</a> -->
                     </header>
                     <div class="node__content clearfix">
                       <div property="schema:text" class="clearfix text-formatted field field--name-body field--type-text-with-summary field--label-hidden field__item">
@@ -46,19 +46,22 @@
                           <summary>Please be informed before reviews:</summary>
                           <div>
                             <ul>
-                              <li>The app doesn't collect sensitive end-user data, nor your Instagram, Twitter, etc. credentials.<br></li>
-                              <li>Be sure to allow the required permissions when prompted, else features are crippled, useless.<br></li>
-                              <li>Some ISPs like those in Indonesia block Reddit, Vimeo, etc. Use reliable non-free VPN, proxies, etc., or stay safe.<br></li>
-                              <li>Please check your internet speed at fast.com, etc. Slow speed may result in broken downloads.<br></li>
-                              <li>Most convenient features of downloads are via the app web interface, not the official apps, nor external browsers. Check out <b>How to use</b>.<br></li>
-                              <li>All downloads assumed the media assets are internal to each supported site, or their networks. Some sites like Reddit, or Twitter, point links to external ones like cnn.com, etc. These external sites are not supported. Meaning downloads may break.<br></li>
-                              <li>Some sites embed a post/ tweet in another post/ tweet like Reddit or Twitter. Downloading them only works for a stand alone post/ tweet, not the one embedded inside another. Just visit its original to download.<br></li>
-                              <li>Youtube videos embedded at Reddit, Twitter, etc. are NOT supported.<br></li>
-                              <li>Links for sensitive contents and private accounts are gated with some time-sensitive tokens. The links can expire any seconds. Once failed at slow internet connections, old links are expired already which cause broken downloads. Delete them, and re-download.<br></li>
-                              <li>If something is broken, unless it keeps happening, try restarting the app, and see if any better.<br></li>
-                              <li>Do not scrape! Your accounts and IPs subject to b.a.n. When banned, you cannot access the websites! Have backups, paid VPN, proxies, etc., many. Free VPNs may drop your speed from 1MB to 100KB. Again, do not scrape! If you do, please use it wisely and responsibly. I can think of one legit example -- saving my limited time to foster my creativity. I am, the app developer, an artist by nature. I am studying arts which interest me much, and need offline room to save time and mobile data usages. I don't repost them myself, at least so far. They are for personal study. Hopefully you can make this app beneficial for your own highest good as well in your life journey.<br></li>
-                              <li>Specific to social media sharing: while some apps can receive multiple images like Facebook, Whatsapp, Twitter, etc., some others cannot such as Instagram (See https://developers.facebook.com/docs/instagram/sharing-to-feed), Reddit, etc. TikTok cannot even receive one without API which is only granted to few and its own partners. Please bear with it and do not send negative reviews for something that the native apps don't even support in the first place using Android standards. It is simply beyond our power.</li>
-                              <li>One star is a mere hatred at Android. It took me literally 3000 hours to build this app. Kindly take it into consideration regardless its limitations.</li>
+                              <li>Please do not submit negative reviews for fun. Use the provided Feedback channel to help improve the app instead. Negative reviews without followups and updates after being corrected are like hit-and-run, not constructive and disheartening. It is a labor of love for Drupal lovers. It took me 2000+ extensive hours to build this app. It is to foster Drupal! Please take it into account before submitting reviews. Stay awesome and helpful. Thank you for your kind considerations!</li>
+                              <li>The app doesn't collect sensitive end-user data. We do collect crash reports and user interactions using common third party analytics, and via your own conscious submission of the crash reports. Find the crash report at <b>About > Crash report</b>. If you don't submit it, no data is sent to us. You can also preview the submitted data on the email body before submission.</li>
+                              <li>The following are needed to properly address potential crash solutions: Environment, Android version, OS version, DruPocket for Drupal version and flavor, Model, Device, Product, SDK, Screen density and resolution. You can also remove some info as needed. We do not share the collected data. Both are solely to improve user experience and engagement.</li>
+                              <li>The DruPocket for Drupal offers additional features such as adding new personal notes/ todos or feeds, archiving, editing and deleting existing notes/ feeds. Only the pro version supports deletions, though. These optional features may need optional permissions. <b>Optional</b> means none is enabled until you do so:
+                                <ul>
+                                  <li>INTERNET/ ACCESS_NETWORK_STATE to download new articles, feed pictures, connecting to Youtube or podcast provider sites to fetch and display more feeds. If you disallow, no news, videos or podcasts  will show. The system may likely grant a little portion of this permission. This limited internet access may suffice. If however things do not function properly, be sure to enable the needed permissions.<br></li>
+                                  <li>READ_EXTERNAL_STORAGE/ WRITE_EXTERNAL_STORAGE to store/ cache news, Youtube, podcast images temporarily, and your favorites in CSV file. None of your personal data is read or written/ overwritten.<br></li>
+                                  <li>RECEIVE_BOOT_COMPLETED/ VIBRATE to start alarm on device reboot for automatic scheduled article deletions older than the specified time: 2 months, 1 year, 2 years, etc.<br></li>
+                                  <li>MEDIA_CONTENT_CONTROL/ READ_PHONE_STATE to play and stop the podcast in this app automatically, such as when a podcast running, and you want to receive a phone simply to avoid noises. The app does not read your phone data, nor contacts.<br> </li>
+                                  </ul>
+                              </li>
+                              <li>They are only enabled on your own conscious approval. You will be asked for permissions before using this app. Also check out the <b>Settings > Permissions</b> to enable the rest. Again all is disabled by default until you enable it. If disallowed, they simply won't function. No hidden gimmicks.</li>
+                              <li>The DruPocket for Drupal strives to leverage Android architecture components goodness. Fully fragmentized with just literally one activity. However it is at early stage, please bear in mind! It has not been battle-tested against million devices, yet. Should you find a bug or hiccup, please use the Feedback.</li>
+                              <li>I am <b>Gaus Surahman</b>, the DruPocket for Drupal app developer, and this app is, not affiliated to Youtube or Drupal company or any of these news, podcasts, feeds providers, nor own them. The contents displayed in the application do not belong to me, or DruPocket for Drupal. If however, you legal-proven 100% believe you find a copyrighted article, or picture, please contact me first, thank you, so I can resolve, or delete it for good.</li>
+                              <li>By using this app, you acknowledge that you have read all of the above info properly. Should you have any question, please get in touch. Also check out the <b>About > Privacy policy</b> section for more related info.</li>
+                              <li>The DruPocket does not have any affiliation with Youtube (the company), nor Drupal.</p><p><strong>Drupal is a registered trademark of Dries Buytaert</strong>.</li>
                             </ul>
 
                           </div>
