--- a/project/vipinstagram/license/index.html
+++ b/project/vipinstagram/license/index.html
@@ -57,10 +57,15 @@
                               <!-- <p><a class="plain menuitem" href="#apache"><b>Picasso</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2013 Square, Inc.</span></small></a></p>
-                              <hr> -->
+                              <hr>
                               <p><a class="plain menuitem" href="#apache"><b>Glide</b> &#10143;<br>
                                   <small>BSD, part MIT and Apache 2.0<br>
                                     <span class="licenseowner">Copyright (c) 1994 Anthony Dekker</span></small></a></p>
+                              <hr> -->
+
+                              <p><a class="plain menuitem" href="#apache"><b>Coil</b> &#10143;<br>
+                                  <small>Apache 2.0<br>
+                                    <span class="licenseowner">Copyright 2020 Coil Contributors</span></small></a></p>
                               <hr>
                               <!--
 
@@ -95,10 +100,10 @@
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright 2017 Tonyo Francis</span></small></a></p>
                               <hr>
-                              <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
+                              <!-- <p><a class="plain menuitem" href="#apache"><b>Fast-Android-Networking</b> &#10143;<br>
                                   <small>The Apache License<br>
                                     <span class="licenseowner">Copyright (C) 2016 Amit Shekhar</span></small></a></p>
-                              <hr>
+                              <hr> -->
 
                               <p><a class="plain menuitem" href="#apache"><b>Android libraries</b> &#10143;<br>
                                   <small>The Apache License<br>
